Fix CORS configuration to use property-based origins
- Move application.properties to src/main/resources/ (standard location)
- Update SecurityConfig to read allowed origins from application.properties
- Use @Value annotation to inject cors.allowed-origins property
- Support multiple origins separated by commas
- Fixes CORS issues with frontend at localhost:3000